homepage gemaakt en navbar z-index gefixed

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,2 +1,13 @@
 $primaryColor: rgb(36, 36, 36);
 $secondaryColor: rgb(0, 128, 128);
+
+$transition_1: all 150s;
+$transition_2: all 200s;
+$transition_3: all 250s;
+$transition_4: all 300s;
+$transition_5: all 350s;
+$transition_6: all 400s;
+$transition_7: all 450s;
+$transition_8: all 500s;
+$transition_9: all 550s;
+$transition_10: all 600s;
